--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "babel-node ./app.js",
-    "dev": "gulp start"
+    "dev": "gulp start",
+    "build": "babel app.js -o compiled.js"
   },
   "dependencies": {
     "body-parser": "~1.15.1",
